<resources>

    <string name="app_name">MineSweeper</string>
    <string name="play">Play</string>
    <string name="scores_records">Score Records</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="timer">Timer</string>
    <string name="smiley">Smiley</string>
    
    <string name="name_label">Player Name</string>
    <string name="size_label">Game Size</string>
    <string name="level_label">Level</string>
    <string name="remove_label">Remove all Records</string>
    <string name="small_label">Small</string>
    <string name="big_label">Big</string>
    <string name="b_remove">Remove</string>
    
    <string name="scores_easy">Easy</string>
    <string name="scores_medium">Medium</string>
    <string name="scores_hard">Hard</string>
        

</resources>