<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >
    
     <TextView
         android:id="@+id/t_level"
         android:layout_width="301dp"
         android:layout_height="wrap_content"
         android:layout_gravity="left|top"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/level_label"
         android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rg_lvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/lvl_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:checked="true"
            android:gravity="center_vertical|start|left|center_horizontal"
            android:text="@string/easy_label" />

        <RadioButton
            android:id="@+id/lvl_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:text="@string/medium_label" />

        <RadioButton
            android:id="@+id/lvl_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start|right"
            android:text="@string/hard_label" />
    </RadioGroup>

    <TextView
        android:id="@+id/t_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/size_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rg_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/size_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/small_label" />

        <RadioButton
            android:id="@+id/size_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_label" />

        <RadioButton
            android:id="@+id/size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_label" />
    </RadioGroup>

    <TextView
        android:id="@+id/t_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/e_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/t_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/remove_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/b_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/b_remove" />
    

</LinearLayout>