<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
      android:id="@+id/HighScoresTitle"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:gravity="center"
      android:textColor="#000"
      android:textSize="35sp"
      android:text="@string/scores_records" />
    
    <TextView
      android:id="@+id/HardTitle"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:gravity="center"
      android:textColor="#FFFFFF"
      android:textSize="27sp"
      android:background="@color/button_normal"
      android:text="@string/scores_hard" />
    <ListView
        android:id="@+id/score_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
     <TextView
      android:id="@+id/MediumTitle"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:gravity="center"
      android:textColor="#FFFFFF"
      android:textSize="27sp"
      android:background="@color/button_normal"
      android:text="@string/scores_medium" />
    <ListView
        android:id="@+id/score_list_view2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
     <TextView
      android:id="@+id/EasyTitle"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:gravity="center"
      android:textColor="#FFFFFF"
      android:textSize="27sp"
      android:background="@color/button_normal"
      android:text="@string/scores_easy" />
    <ListView
        android:id="@+id/score_list_view3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
    </ScrollView>
